# pytest-lunch-and-learn

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup-db.sh
app/: config.py  db.py  gateway.py  main.py  utils.py
app/domain/client/: client_dao.py  client_router.py  client_service.py
data/migrations/: 20240201000000_add_clients_table.sql
tests/: conftest.py
tests/basics/: conftest.py  test_01_basics.py  test_02_testing_with_classes.py  test_03_fixtures.py  test_04_fixtures_over_classes.py  test_05_patching.py  test_06_dependency_injection.py  test_07_using_markers.py  test_08_parameterization.py
tests/integration/: conftest.py
tests/integration/non_router/: test_client_dao.py
tests/integration/router/: conftest.py  test_client_router_e2e.py
tests/unit/: conftest.py
tests/unit/non_router/: test_client_service.py
tests/unit/router/: conftest.py  test_client_router.py
