[tool.poetry]
name = "pyest-with-filipe"
version = "0.1.0"
description = ""
authors = ["Charlie Tester <tester@ch.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
requests = "^2.28.0"
pydantic = "^1.9.1"
uvicorn = { extras = ["standard"], version = "^0.17.6" }
gunicorn = "^20.1.0"
pip = "^23.3"
psycopg = { extras = ["pool", "c"], version = "^3.0.15" }


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-dotenv = "^0.5.2"
pytest-postgresql = "^4.1.1"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"
pytest-watcher = "^0.3.5"


[tool.pytest.ini_options]
env_override_existing_values = 1
addopts = "-ra --disable-warnings"
asyncio_mode = "auto"
testpaths = [
    "tests"
]
